# timestuff

./: Makefile  README.md  pyproject.toml
src/timestring/: Range.py
src/timestuff/: Date.py  Range.py  __init__.py
tests/: test_timestring.py
